--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,10 @@ export(public.remove)
 export(set.field.types)
 export(user.datasets)
 export(user.public.datasets)
+import(jsonlite)
+import(gtools)
+import(RCurl)
+import(ape)
+import(plyr)
+import(seqinr)
+import(getPass)
