--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: BOLD.R
 Type: Package
 Title: A package to interface with the Barcode of Life Database through R
-Version: 0.3.6
+Version: 0.4.0
 Author: Nishan Mudalige
-Maintainer: Nishan Mudalige <mudalign@uoguelph.ca>, Joris D'hondt <jdhondt@uoguelph.ca>
+Maintainer: Nishan Mudalige <mudalign@uoguelph.ca>
 Description: BOLDR is a package which allows users to access data directly from BOLD into R via current APIs maintained by the BOLD system. Users can access private data by logging in to BOLD using BOLDR, or they can access public data without the need to login. All data accessed using BOLDR is stored in R with a consistent internal structure and this allows the user to employ the suite of functions provided by BOLDR along with existing packages to perform statistical analysis on DNA sequences.
     BOLDR is a powerful, flexible and convenient platform which provides the user with the capacity to access and analyze large amounts of private and public data on BOLD directly through R.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 3.4.2)
+Depends: R (>= 4.0.0)
 Imports: jsonlite, gtools, RCurl, ape, plyr, seqinr, getPass
 RoxygenNote: 7.1.1
