--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 Depends: R (>= 4.0.0)
 Imports: jsonlite, gtools, RCurl, ape, plyr, seqinr, getPass
 RoxygenNote: 7.1.1
+Suggests: 
+    covr
